<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetingPlace</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
     <string name="meetingPlace">My Meeting Places</string>
    <string name="reg">Register</string>
    <string name="view">Retrive</string>
   
    <string name="takePhoto">TAKE PHOTO</string>
    <string name="lat">Lat</string>
    <string name="latitude">LAT</string>
    <string name="lng">LNG</string>
    <string name="description">Description</string>
    <string name="save">SAVE</string>
    <string name="capturedImage">Captured Image</string>
    <string name="place">Places Info</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="listimage">Image</string>
    <string name="visited">Visited Place</string>
    <string name="location">Current Location</string>
    <string name="back">BACK</string>
    <string name="homepageimage">homepageimage</string>
    <string name="contact">Contact Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="contactdetails">Contact Details</string>

</resources>
