<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" 
    android:background="@drawable/mfive">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="87dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/listimage"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/lat"
                android:textColor="#000000" 
                />

            <TextView
                android:id="@+id/tvLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/lng"
                android:textColor="#000000" 
                />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/description"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/date"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/time"
                android:textColor="#000000" />

            
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical" >

            
            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/myborder"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textColor="#ffffff"
                android:text="@string/distance"
                 />
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>