<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nazmul.mymeetingplace.MyMeetingPlaceActivity" 
    android:background="@drawable/mfour">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/meetingPlace"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/title"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="126dp"
        android:background="#F0E68C"
        android:drawablePadding="8dp"
        android:text="@string/reg"
        android:textColor="#8B4513"
        android:textStyle="bold"
       />

    <Button
        android:id="@+id/viewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/regBtn"
        android:layout_alignStart="@+id/regBtn"
        android:layout_below="@+id/regBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="#F0E68C"
        android:text="@string/view"
        android:textColor="#8B4513"
        android:textStyle="bold"
         />

</RelativeLayout>