<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ooone" >

    <TextView
        android:id="@+id/titleVisitedPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/visited"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/currentlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/myborder"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/location"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lvImageList"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <Button
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6BE8A"
        
            android:text="@string/back"
            android:textColor="#8B4513"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

</LinearLayout>
